--- a/Index.html
+++ b/Index.html
@@ -37,8 +37,11 @@
       <tbody id="expenseTable"></tbody>
     </table>
 
-    <h3>Category Summary</h3>
-    <canvas id="expenseChart"></canvas>
+    <!-- Summary section hidden initially -->
+    <div id="summarySection" style="display:none;">
+      <h3>Category Summary</h3>
+      <canvas id="expenseChart"></canvas>
+    </div>
   </div>
 
   <div class="footer">
